--- a/RottingGraphicRecolor/RottingGraphicRecolor.csproj
+++ b/RottingGraphicRecolor/RottingGraphicRecolor.csproj
@@ -30,6 +30,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release1.5|AnyCPU'">
+    <OutputPath>bin\Release1.5\</OutputPath>
+    <DefineConstants>TRACE;v15</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\workshop\content\294100\2009463077\Current\Assemblies\0Harmony.dll</HintPath>
@@ -56,6 +65,7 @@
     <Compile Include="GeneOverrideRottingColor.cs" />
     <Compile Include="RottingGraphicRecolor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RottingGraphicRecolor_v15.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
